# senec-client

./: .gitignore  Cargo.toml  README.md  build.rs  notes.txt  sdkconfig.defaults  w.sh
.cargo/: config.toml
src/: client.rs  display.rs  main.rs  types.rs  wifi.rs
