[package]
name = "senec-c"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"




[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-sys = "0.33"
esp-idf-hal = "0.42.5"
epd-waveshare = "0.5.0"
embedded-graphics = "=0.7"
embedded-svc = "0.26.4"
anyhow = "1.0.79"
embedded-websocket = "0.9.3"
heapless = { version = "0.8.0", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.113"
serde = "1.0.195"
embedded-hal = "0.2.7"
[build-dependencies]
embuild = "0.31.3"
dotenv = "0.15.0"
